# SGR-MCP

./: .coverage  BENCHMARK_REPORT.md  COMPREHENSIVE_PROJECT_REVIEW_2024.md  FULL_PROJECT_REVIEW_2025.md  MCP_SGR_ADVANCED_FEATURES_2024.md  MCP_SGR_IMPROVEMENTS_SUMMARY_2024.md  PROJECT_REVIEW_REPORT.md  README.md
mcp-sgr/: .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  API_DOCUMENTATION.md  BUDGET_MODELS_TEST_RESULTS.md  COMPREHENSIVE_PROJECT_REVIEW.md  CONSOLIDATED_BENCHMARK_RESULTS.md  DEBT_RESOLUTION_REPORT.md  DEPLOY-EASY.md  DETAILED_PROJECT_ANALYSIS.md  Dockerfile  FINAL_RECOMMENDATIONS.md  FINAL_SGR_BENCHMARK_REPORT.md  HONEST_SGR_EVALUATION.md  Makefile  OPTIMIZATION_COMPLETE.md  PROJECT_REVIEW.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICKSTART_GUIDE.md  README.md  SGR_SUCCESS_REPORT.md  STRUCTURED_OUTPUT_REQUIREMENT.md  TECH_DEBT.md  YANDEX_GPT_TESTING.md  advanced_reasoning_benchmark.py  deploy-simple.sh  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  docker-one-liner.sh  mcp.json  pyproject.toml  pytest.ini  quick-test.py  router_policy.yaml  run_benchmarks.sh  schema_complexity_test_20250826_054015.json  (+10 more)
mcp-sgr/benchmark-pack/: BENCHMARK_PACK_OVERVIEW.md  COMPREHENSIVE_BENCHMARK_REPORT_20250826_154908.md  README.md  SGR_COMPARISON_TABLES_20250826_175434.md  SGR_IMPACT_ANALYSIS_20250826_175454.md  benchmark_runner.py  config.yaml  config_comprehensive.yaml  config_free.yaml  config_free_only.yaml  config_quick_test.yaml  config_top_models.yaml  config_ultra_budget.yaml  estimate_comprehensive_cost.py  generate_comparison_tables.py  monitor_progress.py  visualize_results.py  watch_progress.sh
mcp-sgr/benchmarks/: README.md  extended_benchmarks.py  quick_test.py  run_benchmarks.py
mcp-sgr/config/: haproxy.cfg  router_policy_v2.yaml
mcp-sgr/docs/: README.md  architecture.md  benchmarks.md  cli.md  configuration.md  contributing.md  deployment.md  getting-started.md  http-api.md  observability.md  sgr-concepts.md
mcp-sgr/examples/: README-claude-desktop.md  agent_wrapper.py  basic_usage.py  claude-desktop-config-vps.json  claude-desktop-config.json  custom_schema.py  gemini-cli-config.json  gemini_proxy.py  gemini_setup.sh  mcp-http-bridge.js  minimal-test.sh  n8n-http-node-example.json  n8n-integration-guide.md  pension_calculator.py  simple_sgr_demo.py  story_generation_example.py  test_http_api.py
mcp-sgr/integrations/: README.md
mcp-sgr/reports/: poc_20250826T034701Z.json  poc_20250826T034701Z.md  poc_summ_20250826T040451Z.json  poc_summ_20250826T040451Z.md
mcp-sgr/scripts/: deploy.sh
mcp-sgr/src/: __init__.py  cli.py  http_server.py  server.py
mcp-sgr/tests/: test_cli.py  test_coverage_check.py  (+9 more)
(+136 files in other folders)
